# pymemeru

./: pyproject.toml
pymemeru/: __init__.py  __main__.py  aioget.py  page.py  popular.py  search.py
pymemeru/models/: page.py  search.py
tests/: test_page.py  test_popular.py  test_search.py
