[project]
name = "pymemeru"
version = "0.2.5"
description = "memepedia.ru parser for python"
authors = [
    {name = "Daniel Zakharov", email = "gzdan734@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.11.1",
    "pydantic>=2.7.1",
    "lxml>=6.0.0",
    "aiohttp>=3.13.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-modern>=0.7.4",
]
