[project]
name = "pymemeru"
version = "0.2.5"
description = "memepedia.ru parser for python"
authors = [
    {name = "Daniel Zakharov", email = "gzdan734@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.11.1",
    "domselect>=0.0.6",
    "msgspec>=0.20.0",
]

[project.optional-dependencies]
selectolax = [
    "selectolax>=0.4.7",
]

lxml = [
    "lxml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-modern>=0.7.4",
]
