[project]
name = "pymemeru"
version = "0.3.1"
description = "memepedia.ru parser for python"
authors = [
    {name = "Daniel Zakharov", email = "gzdan734@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "aiohttp>=3.13.3",
    "msgspec>=0.20.0",
    "selectolax>=0.4.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-modern>=0.7.4",
]
